# retain-susceptibility

./: .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  pyproject.toml
configs/channel_matrix/: 14b_tofu.yaml  1p5b_tofu.yaml  7b_tofu.yaml  7b_tofu_recal.yaml  7b_tofu_recal2.yaml  alpha_protection_freeze.yaml  alpha_protection_freeze_14b.yaml  alpha_protection_freeze_1p5b.yaml  alpha_protection_freeze_llama8b.yaml  llama8b_tofu.yaml  objective_freeze.yaml  objective_freeze_14b.yaml  objective_freeze_1p5b.yaml  objective_freeze_7b_recal.yaml  objective_freeze_7b_recal2.yaml  (+8 more)
docs/: CLUSTER_FLEET_RUNBOOK.md  PAPER_CAMPAIGN_PREFLIGHT.md  PAPER_EVIDENCE_PIPELINE.md  channel_direction.md  paper_revision_plan.md  plan_2026-07-23_fleet.md  plan_2026-07-23_gpu.md  plan_table12_campaign.md
figures/: fig6_evidence_chain_generated.tex
paper/: main.tex  references.bib
prereg/: AMENDMENT-2026-07-23-cvar-bound.md  AMENDMENT-2026-07-23-primary-setting.md  constants.yaml
tests/: conftest.py  test_alpha_mixture_pure.py  test_blocks.py  test_channel_matrix_pure.py  test_cluster_queue.py  test_data_registry.py  test_evidence_tables.py  test_export_alpha_protection.py  test_generation_metric.py  test_generators_analysis.py  test_guards.py  test_losses.py  test_next_actions.py  test_paper_evidence.py  test_paper_preflight.py  test_partition.py  test_plot_evidence_chain.py  test_probe_invariants.py  test_raw_evidence.py  test_raw_plan_init.py  test_repo_hygiene.py  test_rwku.py  test_sealing.py  test_stages.py  test_stats_ablation.py  test_substrate_probe.py  test_tofu.py  test_wmdp.py
(+132 files in other folders)
